# spritzle

./: .gitignore  .hound.yml  .travis.yml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: README.md  config.yml
.circleci/image/: Dockerfile
docs/: design.md  hooks.md  interface.md
scripts/: complete.sh
spritzle/: aiohttp.py  alert.py  auth.py  common.py  config.py  core.py  core.py.state_save  error.py  hooks.py  logger.py  main.py  rest.py  resume_data.py  session.py  settings.py  torrent.py  user.py
spritzle/cli/: main.py
spritzle/daemon/: alert.py  common.py  config.py  core.py  hooks.py  logger.py  main.py  resume_data.py  torrent.py
spritzle/resource/: auth.py  config.py  session.py  settings.py  torrent.py  user.py
spritzle/tests/: __init__.py  _test_core.py  common.py  conftest.py  curl_tests.sh  test_aiohttp.py  test_alert.py  test_auth.py  test_common.py  test_config.py  test_core.py  test_hooks.py  test_main.py  test_rest.py  test_resume_data.py  test_session.py  test_settings.py  test_torrent.py  test_user.py
spritzle/view/: auth.py  config.py  session.py  torrent.py  user.py
spritzle_cli/: main.py
spritzle_cli/commands/: add.py  auth.py  list.py  remove.py  settings.py  status.py
tests/: conftest.py  test_alert.py  test_config.py  test_hooks.py  test_resume_data.py  test_torrent.py
tests/daemon/: common.py  curl_tests.sh  test_alert.py  test_common.py  test_config.py  test_core.py  test_hooks.py  test_resume_data.py  test_torrent.py
tmp/: Pipfile  README.md  setup.py
(+38 files in other folders)
